[package]
name = "gisaid-dupes"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
assert2 = "0.3.6"
atty = "0.2.14"
auto_ops = "0.3.0"
bzip2 = "0.4.3"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std", "wasmbind"] }
clap = { version = "3.2.23", features = ["derive"] }
color-eyre = "0.6.1"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
csv = "1.1.6"
ctor = "0.1.22"
data-encoding = "2.3.3"
env_logger = "0.10.0"
eyre = "0.6.8"
flate2 = "1.0.24"
getrandom = "0.2.6"
indexmap = { version = "1.8.1", features = ["serde"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.16"
maplit = "1.0.2"
num = "0.4.0"
num-traits = "0.2.14"
num_cpus = "1.13.1"
owo-colors = "3.3.0"
pretty_assertions = "1.2.1"
rayon = "1.5.2"
ring = "0.16.20"
rust-crypto = "0.2.36"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order", "indexmap", "unbounded_depth"] }
strum = "0.24.0"
strum_macros = "0.24.0"
xz2 = "0.1.7"
zstd = { version = "0.12.2", features = ["zstdmt"] }

[dev-dependencies]
rstest = "0.16.0"
rstest_reuse = "0.5.0"
